--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #fff;
 	color: #000;
-	font-family: "Century Gothic", helvetica, arial, sans-serif;
-	font-size: 1.4em; /* equiv 14px */
+	font-family: "Raleway", helvetica, arial, sans-serif;
+	font-size: 1em; /* equiv 14px */
 	line-height: 1.5; /* adapt to your design */
 }
