--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@ body {
 	font-size: 1em; /* equiv 14px */
 	line-height: 1.5; /* adapt to your design */
 }
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+  }
