--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	line-height: 1.5; /* adapt to your design */
 }
 
-nav ul {
+nav {
     display: flex;
     justify-content: space-between;
   }
