--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@ body {
   line-height: 1.5; /* adapt to your design */
 }
 
- img {
+img {
   display: flex;
   flex-direction: row;
-flex-wrap: wrap;
-align-content: flex-start;
+  flex-wrap: wrap;
+  align-content: flex-start;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-end;
+  justify-content: space-between;
 }
