--- a/style.css
+++ b/style.css
@@ -6,16 +6,10 @@ body {
   line-height: 1.5; /* adapt to your design */
 }
 
-img {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-start;
-}
-nav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-end;
-  justify-content: flex-end;
+.topnav ul {
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
 }
