--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 * {
   transition: all 0.3s ease-in-out;
 }
+body {
+  background-color: #fff;
+  color: #000;
+  font-family: "Raleway", arial, sans-serif;
+  font-size: 1.4em; /* equiv 14px */
+  line-height: 1.5; /* adapt to your design */
+}
 
 .container {
   clear: both;
