--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background-color: #fff;
   color: #000;
   font-family: "Raleway", arial, sans-serif;
-  font-size: 1.4em; /* equiv 14px */
+  font-size: 1em;
   line-height: 1.5; /* adapt to your design */
 }
 
