--- a/style.css
+++ b/style.css
@@ -9,26 +9,23 @@ body {
   line-height: 1.5; /* adapt to your design */
 }
 
-.container {
-  clear: both;
-  overflow: auto;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
 }
 
-nav {
-  float: right;
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
 }
 
-.logo img {
-  float: left;
-}
-
-ul li {
-  display: inline-block;
-  padding: 10px;
-  font-size: 20px;
-  font-family: raleway;
-}
-
-ul li:hover {
-  color: orange;
+/* Change the link color on hover */
+li a:hover {
+  background-color: #555;
+  color: white;
 }
