--- a/style.css
+++ b/style.css
@@ -13,19 +13,24 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: right;
 }
 
 li a {
   display: block;
-  color: #0065FC;
-  padding: 8px 16px;
+  color: #0065fc;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-/* Change the link color on hover */
+/* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #FFF;
+  background-color: #fff;
   color: #000;
 }
