--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@ body {
   font-size: 1em;
   line-height: 1.5; /* adapt to your design */
 }
-
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #333;
+
+  background-color: #fff;
 }
 
 li {
@@ -24,7 +23,7 @@ li {
 li a {
   display: block;
   color: #0065fc;
-  text-align: center;
+  text-align: Right;
   padding: 14px 16px;
   text-decoration: none;
 }
