--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ body {
   font-size: 1em;
   line-height: 1.5; /* adapt to your design */
 }
+.container{
+    display: inline-block;
+}
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-
   background-color: #fff;
 }
 
