--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ li a {
   display: flex;
   justify-content:flex-end;
   flex-direction: row-reverse;
+  flex-wrap: wrap-reverse;
   color: #0065fc;
   text-align: Right;
   padding: 14px 16px;
