--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   transition: all 0.3s ease-in-out;
 }
 body {
-  background-color: #fff;
+  background-color: #111;
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
