--- a/style.css
+++ b/style.css
@@ -6,19 +6,30 @@ body {
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  line-height: 1.5; /* adapt to your design */
-}
-.container{
-    display: inline;
-    margin: 20em;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
+  margin: 2em;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+}
+h1 {
+  font-size: 16px;
+  font-weight: 900;
+  margin-bottom: -10px;
+}
+
+ul {
+  list-style-type: none;
+  margin-top: -50px;
+  padding: 0;
+  background-color: #fff;
+  box-sizing: border-box;
+  width: 100%;
+}
+.subscribe {
+  font-weight: 900;
+}
 li {
   float: right;
 }
@@ -31,8 +42,72 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
 li a:hover {
-  background-color: #fff;
+  background-color: none;
   color: #000;
+}
+.fa-map-marker-alt {
+  background-color: #f2f2f2;
+  padding: 15px;
+  border-radius: 15px 0 0 15px;
+}
+.search {
+  display: flex;
+}
+
+.searchTerm {
+  border: none;
+  border-right: none;
+  padding: 5px;
+  color: #000000;
+  font-weight: bolder;
+}
+
+.searchTerm:focus {
+  color: #0065fc;
+}
+
+.searchButton {
+  border: none;
+  background: #0065fc;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 15px 15px 0;
+  padding: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.searchButton:hover {
+  background-color: #61a0ff;
+  color: #000;
+}
+.filter {
+  font-weight: bold;
+}
+.fa-money-bill-wave ,.fa-child, .fa-heart, .fa-dog { 
+  display:table-cell;
+  vertical-align:middle;
+  background-color: #deebff;
+  color: #0065fc;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  background: #deebff;
+}
+
+
+.btn {
+  display: inline-block;
+  border: 2px solid #ecebeb;
+  background: #ffffff;
+  text-align: center;
+  border-radius: 20px 15px 15px 20px;
+ padding-left:  0;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight:600;
 }
