--- a/style.css
+++ b/style.css
@@ -6,46 +6,69 @@ body {
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  margin: 2em;
+  margin: 0px 20px 0px 20px;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
+/* Style the header with a grey background and some padding */
+.header {
+  overflow: hidden;
+  background-color: #fff;
+  padding: 0px;
 }
+
+/* Style the header links */
+.header a {
+  float: left;
+  color: #0065fc;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 50px;
+}
+
+/* Style the logo link (otice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+.header img.logo {
+  padding-top: 15px;
+}
+
+/* Change the background color on mouse-over */
+.header a:hover {
+  background-color: #fff;
+  color: #000;
+}
+.header a.subscribe {
+  font-weight: bold;
+}
+/* Style the active/current link*/
+.header a.active {
+  border-top: solid #0065fc;
+  color: #000;
+}
+
+/* Float the link section to the right */
+.header-right {
+  float: right;
+}
+
+/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .header-right {
+    float: none;
+  }
+}
+
 h1 {
   font-size: 16px;
   font-weight: 900;
   margin-bottom: -10px;
 }
 
-ul {
-  list-style-type: none;
-  margin-top: -50px;
-  padding: 0;
-  background-color: #fff;
-  box-sizing: border-box;
-  width: 100%;
-}
-.subscribe {
-  font-weight: 900;
-}
-li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: #0065fc;
-  text-align: Right;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: none;
-  color: #000;
-}
 .fa-map-marker-alt {
   background-color: #f2f2f2;
   padding: 15px;
@@ -84,30 +107,27 @@ li a:hover {
   background-color: #61a0ff;
   color: #000;
 }
-.filter {
-  font-weight: bold;
-}
-.fa-money-bill-wave ,.fa-child, .fa-heart, .fa-dog { 
-  display:table-cell;
-  vertical-align:middle;
-  background-color: #deebff;
-  color: #0065fc;
-  text-align: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  background: #deebff;
-}
 
+.contenairbtn {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: 900;
+}
 
 .btn {
-  display: inline-block;
-  border: 2px solid #ecebeb;
-  background: #ffffff;
-  text-align: center;
-  border-radius: 20px 15px 15px 20px;
- padding-left:  0;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight:600;
+  background-color: #fff; 
+  border: 3px solid #f2f2f2;
+  border-radius: 60px;
+  color: #0065fc; 
+  padding: 0 20px 0 20px; 
+  font-size: 16px; 
+  cursor: pointer; 
+  margin: 0 20px 0 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
 }
