--- a/style.css
+++ b/style.css
@@ -117,17 +117,31 @@ h1 {
 }
 
 .btn {
-  background-color: #fff; 
-  border: 3px solid #f2f2f2;
+  background-color: #fff;
+  border: 2px solid #f2f2f2;
   border-radius: 60px;
-  color: #0065fc; 
-  padding: 0 20px 0 20px; 
-  font-size: 16px; 
-  cursor: pointer; 
-  margin: 0 20px 0 20px;
+  color: #000;
+  padding: 0 20px 0 20px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  margin: 0 15px 0 15px;
+  transition: all 0.2s ease-in-out;
 }
 
-/* Darker background on mouse-over */
 .btn:hover {
-  background-color: RoyalBlue;
+  transform: scale(1.1);
+  background-color: #f2f2f2;
 }
+.fa-money-bill-wave,
+.fa-child,
+.fa-heart,
+.fa-dog {
+  border: 1px solid #deebff;
+  border-radius: 60px;
+  color: #0065fc;
+  padding: 15px;
+  margin: 0 10px 0 -25px;
+  background-color: #deebff;
+}
+
