--- a/style.css
+++ b/style.css
@@ -9,14 +9,12 @@ body {
   margin: 0px 20px 0px 20px;
 }
 
-/* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
   background-color: #fff;
   padding: 0px;
 }
 
-/* Style the header links */
 .header a {
   float: left;
   color: #0065fc;
@@ -27,12 +25,10 @@ body {
   line-height: 50px;
 }
 
-/* Style the logo link (otice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header img.logo {
   padding-top: 15px;
 }
 
-/* Change the background color on mouse-over */
 .header a:hover {
   background-color: #fff;
   color: #000;
@@ -40,18 +36,15 @@ body {
 .header a.subscribe {
   font-weight: bold;
 }
-/* Style the active/current link*/
 .header a.active {
   border-top: solid #0065fc;
   color: #000;
 }
 
-/* Float the link section to the right */
 .header-right {
   float: right;
 }
 
-/* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -145,3 +138,68 @@ h1 {
   background-color: #deebff;
 }
 
+.attention {
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+
+.fa-info-circle {
+  background-color: #0065fc;
+  color: #fff;
+  border: 2px solid #f2f2f2;
+  border-radius: 40px;
+  margin: 0 10px 0 0;
+}
+.mainresult{
+  display: flex;
+}
+.center {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding: 20px;
+  width: 70%;
+  border-radius: 20px;
+}
+.rightside{
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  padding: 20px;
+  width: 30%;
+  border-radius: 20px;
+}
+
+.card1 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 200px;
+  height: 200px;
+  padding: 5px;
+  margin: 15px;
+  background-color: #fff;
+}
+.card2{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 300px;
+  height: 200px;
+  padding: 5px;
+  margin: 15px;
+  background-color: #fff;
+}
+
+img {
+  border-radius: 5px 5px 0 0;
+  width: 200px;
+  height: 100px;
+  object-fit: cover;
+}
