--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
 }
 
 .header img.logo {
-  padding-top: 15px;
+  max-width:100%;
+  height:auto;
 }
 
 .header a:hover {
@@ -150,7 +151,7 @@ h1 {
   border-radius: 40px;
   margin: 0 10px 0 0;
 }
-.mainresult{
+.mainresult {
   display: flex;
 }
 .center {
@@ -163,8 +164,9 @@ h1 {
   padding: 20px;
   width: 70%;
   border-radius: 20px;
+  margin: 0 20px 0 20px;
 }
-.rightside{
+.rightside {
   background-color: #f2f2f2;
   display: flex;
   flex-direction: row;
@@ -174,6 +176,8 @@ h1 {
   padding: 20px;
   width: 30%;
   border-radius: 20px;
+  margin: 0 20px 0 20px;
+
 }
 
 .card1 {
@@ -186,7 +190,7 @@ h1 {
   margin: 15px;
   background-color: #fff;
 }
-.card2{
+.card2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 20px;
