--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
 }
 
 .header img.logo {
-  max-width:100%;
-  height:auto;
+  max-width: 100%;
+  height: auto;
 }
 
 .header a:hover {
@@ -177,7 +177,6 @@ h1 {
   width: 30%;
   border-radius: 20px;
   margin: 0 20px 0 20px;
-
 }
 
 .card1 {
@@ -191,19 +190,29 @@ h1 {
   background-color: #fff;
 }
 .card2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 20px;
   width: 300px;
-  height: 200px;
+  height: 100px;
   padding: 5px;
-  margin: 15px;
+  margin: 5px;
   background-color: #fff;
 }
 
-img {
-  border-radius: 5px 5px 0 0;
+img.pics1 {
+  border-radius: 20px 20px 0 0;
   width: 200px;
   height: 100px;
   object-fit: cover;
+}
+img.pics2 {
+  border-radius: 20px 0 0 20px;
+  width: 200px;
+  height: 100px;
+  object-fit: cover;
+  padding: 0 10px 0 0;
 }
