--- a/style.css
+++ b/style.css
@@ -151,21 +151,25 @@ h1 {
   border-radius: 40px;
   margin: 0 10px 0 0;
 }
-.mainresult {
+.main-result {
   display: flex;
+  flex-flow: row nowrap;
+}
+.mainsection{
+  background-color: #f2f2f2;
+  padding: 20px;
+  max-width: 70%;
+  border-radius: 20px;
+  margin: 0 20px 0 20px;
 }
 .center {
-  background-color: #f2f2f2;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: flex-start;
-  padding: 20px;
-  width: 70%;
-  border-radius: 20px;
-  margin: 0 20px 0 20px;
 }
+
 .rightside {
   background-color: #f2f2f2;
   display: flex;
@@ -174,7 +178,7 @@ h1 {
   justify-content: space-evenly;
   align-items: flex-start;
   padding: 20px;
-  width: 30%;
+  max-width: 30%;
   border-radius: 20px;
   margin: 0 20px 0 20px;
 }
