--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ h1 {
   display: flex;
   flex-flow: row nowrap;
 }
-.mainsection{
+.mainsection {
   background-color: #f2f2f2;
   padding: 20px;
   max-width: 70%;
@@ -182,18 +182,23 @@ h1 {
   border-radius: 20px;
   margin: 0 20px 0 20px;
 }
-
+.checked {
+  color: #0065fc;
+}
+.roomcontainer {
+  line-height: 0em;
+  padding: 0 0 10px 10px;
+}
 .card1 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 20px;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  max-height: 100%;
   padding: 5px;
   margin: 15px;
   background-color: #fff;
 }
-
 .card2 {
   display: flex;
   flex-direction: row;
@@ -210,7 +215,7 @@ h1 {
 
 img.pics1 {
   border-radius: 20px 20px 0 0;
-  width: 200px;
+  width: 100%;
   height: 100px;
   object-fit: cover;
 }
