--- a/style.css
+++ b/style.css
@@ -200,6 +200,10 @@ h1 {
   border-radius: 20px;
   margin: 0 20px 0 20px;
 }
+.result-title-2 {
+display: flex;
+align-items: baseline;
+}
 .fa-star {
   color: #d8d8d8;
 }
