--- a/style.css
+++ b/style.css
@@ -201,8 +201,8 @@ h1 {
   margin: 0 20px 0 20px;
 }
 .result-title-2 {
-display: flex;
-align-items: baseline;
+  display: flex;
+  align-items: baseline;
 }
 .fa-star {
   color: #d8d8d8;
@@ -254,4 +254,51 @@ img.pics2 {
   height: 130px;
   object-fit: cover;
   padding: 0 10px 0 0;
+}
+img.pics3 {
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+img.pics4 {
+  border-radius: 20px 20px 0 0;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+}
+
+.bottom-section {
+  background-color: #f2f2f2;
+  padding: 20px;
+  max-width: 100%;
+  border-radius: 20px;
+}
+.bottom-result {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.activite-result {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 250px;
+  max-height: 100%;
+  padding: 0px;
+  margin: 15px;
+  background-color: #fff;
+}
+.activite-result-2 {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 250px;
+  max-height: 100%;
+  padding: 5px;
+  margin: 15px;
+  background-color: #fff;
 }
