--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
   margin: 0px 20px 0px 20px;
+  
 }
 
 .header {
@@ -170,7 +171,7 @@ h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
 }
 
