--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 40px 0px 40px;
   
 }
 
 .header {
   overflow: hidden;
   background-color: #fff;
-  padding: 0px;
+  padding: 0;
 }
 
 .header a {
@@ -53,9 +53,34 @@ body {
     display: block;
     text-align: left;
   }
-  .header-right {
-    float: none;
+  
+  .header a.active {
+    border-top: none;
+    border-bottom: solid 4px #0065FC;
+    color: #000;
   }
+  .header-right {
+  
+      display: flex;
+      flex-flow: column-reverse;
+    float: none;
+    position:relative;
+  }
+
+  .subscribe {
+    position:absolute;
+    bottom: 140px;
+    right: 0;
+  }
+
+  .fa-search {
+    display: inline-block;  
+  }
+  
+span.text-rechercher {
+  display: none;
+}
+ 
 }
 h1 {
   font-size: 16px;
@@ -94,6 +119,10 @@ h1 {
   padding-left: 20px;
   cursor: pointer;
   font-size: 16px;
+}
+
+.fa-search {
+  display: none;
 }
 
 .searchButton:hover {
@@ -150,13 +179,18 @@ h1 {
   border-radius: 40px;
   margin: 0 10px 0 0;
 }
+
+
 .main-result {
   display: flex;
   flex-flow: row nowrap;
+  margin-bottom: 50px;
 }
-.mainsection {
-  background-color: #f2f2f2;
-  padding: 20px;
+
+.main-section {
+  background-color: red;
+  display: flex;
+  flex-flow: row wrap;
   max-width: 70%;
   border-radius: 20px;
 }
@@ -165,14 +199,32 @@ h1 {
   font-size: 16px;
   font-weight: 900;
   margin: 10px 0 20px 40px;
+  
 }
 
 .center {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: inline-flex;
+  flex-flow: row wrap;
   justify-content: center;
-  align-items: flex-start;
+}
+
+
+.card1 {
+  box-sizing: content-box;
+  
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 20px;
+  width: 250px;
+  max-height: 100%;
+  padding: 5px;
+  margin: 10px;
+  background-color: #fff;
+}
+
+.roomcontainer {
+  line-height: 0em;
+  padding: 0 0 10px 10px;
 }
 
 .title-bottom {
@@ -190,7 +242,7 @@ h1 {
 }
 
 .rightside {
-  background-color: #f2f2f2;
+  background-color: pink;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -205,31 +257,7 @@ h1 {
   display: flex;
   align-items: baseline;
 }
-.fa-star {
-  color: #d8d8d8;
-}
-.checked {
-  color: #0065fc;
-}
-.roomcontainer {
-  line-height: 0em;
-  padding: 0 0 10px 10px;
-}
-.room-container-2 {
-  padding: 0 0 0 10px;
-  width: 150px;
-  line-height: 1em;
-}
-.card1 {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 20px;
-  width: 250px;
-  max-height: 100%;
-  padding: 5px;
-  margin: 15px;
-  background-color: #fff;
-}
+
 .card2 {
   display: flex;
   flex-direction: row;
@@ -242,6 +270,22 @@ h1 {
   margin: 5px;
   background-color: #fff;
 }
+
+.room-container-2 {
+  padding: 0 0 0 10px;
+  width: 150px;
+  line-height: 1em;
+}
+
+.fa-star {
+  color: #d8d8d8;
+}
+.checked {
+  color: #0065fc;
+}
+
+
+
 
 img.pics1 {
   border-radius: 20px 20px 0 0;
@@ -270,7 +314,7 @@ img.pics4 {
 }
 
 .bottom-section {
-  background-color: #f2f2f2;
+  background-color: green;
   padding: 20px;
   max-width: 100%;
   border-radius: 20px;
