--- a/style.css
+++ b/style.css
@@ -188,11 +188,12 @@ h1 {
 }
 
 .main-section {
-  background-color: red;
+  background-color: #f2f2f2;
   display: flex;
   flex-flow: row wrap;
   max-width: 70%;
   border-radius: 20px;
+  padding-top: 30px;
 }
 
 .result-title {
@@ -222,6 +223,16 @@ h1 {
   background-color: #fff;
 }
 
+.card1 a {
+  color: #000;
+  text-decoration: none;
+}
+
+.card2 a {
+  color: #000;
+  text-decoration: none;
+}
+
 .roomcontainer {
   line-height: 0em;
   padding: 0 0 10px 10px;
@@ -242,7 +253,7 @@ h1 {
 }
 
 .rightside {
-  background-color: pink;
+  background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -253,9 +264,17 @@ h1 {
   border-radius: 20px;
   margin: 0 20px 0 20px;
 }
-.result-title-2 {
-  display: flex;
-  align-items: baseline;
+.result-title-2{
+  display: inline-flex;
+  justify-content: space-between;
+  font-weight: bold;
+  align-items: center;
+  position: relative;
+}
+.fa-chart-line {
+  font-size: 1.3em;
+  position: absolute;
+  right: -170px;
 }
 
 .card2 {
@@ -314,10 +333,15 @@ img.pics4 {
 }
 
 .bottom-section {
-  background-color: green;
+  background-color: none;
   padding: 20px;
   max-width: 100%;
   border-radius: 20px;
+  font-weight: bolder;
+}
+.bottom-section a {
+  text-decoration: none;
+  color: #000;
 }
 .bottom-result {
   display: flex;
@@ -333,7 +357,7 @@ img.pics4 {
   border-radius: 20px;
   width: 250px;
   max-height: 100%;
-  padding: 0px;
+  padding: 0;
   margin: 15px;
   background-color: #fff;
 }
@@ -343,7 +367,73 @@ img.pics4 {
   border-radius: 20px;
   width: 250px;
   max-height: 100%;
-  padding: 5px;
-  margin: 15px;
+  padding-bottom: 5px;
+  margin: 23px;
   background-color: #fff;
 }
+
+.description-bottom {
+  margin-left: 20px;
+  font-weight:bolder;
+}
+.bottom-title {
+  font-weight: bolder;
+  margin: 0 0 0 35px;
+}
+
+
+
+
+
+
+
+
+
+
+
+.footer-clean {
+  margin: 50px 0 0 0;
+  padding:25px 20px 20px 0px;
+  background-color: #f2f2f2;
+  color:#000;
+
+  
+}
+
+.footer-clean h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
+}
+
+.footer-clean ul {
+  padding:0;
+  list-style:none;
+  line-height:2em;
+  font-size:14px;
+  margin-bottom:0;
+}
+
+.footer-clean ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
+}
+
+.footer-clean ul a:hover {
+  opacity:1;
+}
+
+.footer-container{
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:space-evenly;
+  width: 100%;
+}
+
+
+
+
+
