--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 * {
   transition: all 0.3s ease-in-out;
 }
+
 body {
   background-color: #fff;
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  margin: 0px 40px 0px 40px;
-  
+  margin: 0;
 }
 
 .header {
@@ -35,9 +35,11 @@ body {
   background-color: #fff;
   color: #000;
 }
+
 .header a.subscribe {
   font-weight: bold;
 }
+
 .header a.active {
   border-top: solid #0065fc;
   color: #000;
@@ -53,35 +55,30 @@ body {
     display: block;
     text-align: left;
   }
-  
   .header a.active {
     border-top: none;
     border-bottom: solid 4px #0065FC;
     color: #000;
   }
   .header-right {
-  
-      display: flex;
-      flex-flow: column-reverse;
+    display: flex;
+    flex-flow: column-reverse;
     float: none;
-    position:relative;
+    position: relative;
   }
-
   .subscribe {
-    position:absolute;
+    position: absolute;
     bottom: 140px;
     right: 0;
   }
-
   .fa-search {
-    display: inline-block;  
+    display: inline-block;
   }
-  
-span.text-rechercher {
-  display: none;
+  span.text-rechercher {
+    display: none;
+  }
 }
- 
-}
+
 h1 {
   font-size: 16px;
   font-weight: 900;
@@ -92,6 +89,7 @@ h1 {
   padding: 15px;
   border-radius: 15px 0 0 15px;
 }
+
 .search {
   display: flex;
 }
@@ -155,10 +153,8 @@ h1 {
   transform: scale(1.1);
   background-color: #f2f2f2;
 }
-.fa-money-bill-wave,
-.fa-child,
-.fa-heart,
-.fa-dog {
+
+.fa-money-bill-wave, .fa-child, .fa-heart, .fa-dog {
   border: 1px solid #deebff;
   border-radius: 60px;
   color: #0065fc;
@@ -180,38 +176,57 @@ h1 {
   margin: 0 10px 0 0;
 }
 
-
 .main-result {
-  display: flex;
-  flex-flow: row nowrap;
-  margin-bottom: 50px;
+  display: inline-block;
+  width: 100%;
 }
 
 .main-section {
   background-color: red;
-  display: flex;
-  flex-flow: row wrap;
   max-width: 70%;
   border-radius: 20px;
+  padding-top: 30px;
 }
 
 .result-title {
   font-size: 16px;
   font-weight: 900;
   margin: 10px 0 20px 40px;
-  
 }
 
 .center {
   display: inline-flex;
   flex-flow: row wrap;
   justify-content: center;
+
 }
 
+.rightside {
+  background-color: pink;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  padding: 20px;
+  max-width: 30%;
+  border-radius: 20px;
+}
+
+.result-title-2 {
+  display: inline-flex;
+  justify-content: space-between;
+  font-weight: bold;
+  align-items: center;
+  position: relative;
+}
+
+.fa-chart-line {
+  font-size: 1.3em;
+  position: absolute;
+  right: 0;
+}
 
 .card1 {
   box-sizing: content-box;
-  
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 20px;
@@ -220,6 +235,16 @@ h1 {
   padding: 5px;
   margin: 10px;
   background-color: #fff;
+}
+
+.card1 a {
+  color: #000;
+  text-decoration: none;
+}
+
+.card2 a {
+  color: #000;
+  text-decoration: none;
 }
 
 .roomcontainer {
@@ -237,26 +262,12 @@ h1 {
   margin: 10px 0 20px 25px;
   text-decoration: none;
 }
+
 .title-bottom:hover {
   color: #0065fc;
 }
 
-.rightside {
-  background-color: pink;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  padding: 20px;
-  max-width: 30%;
-  border-radius: 20px;
-  margin: 0 20px 0 20px;
-}
-.result-title-2 {
-  display: flex;
-  align-items: baseline;
-}
+
 
 .card2 {
   display: flex;
@@ -280,12 +291,10 @@ h1 {
 .fa-star {
   color: #d8d8d8;
 }
+
 .checked {
   color: #0065fc;
 }
-
-
-
 
 img.pics1 {
   border-radius: 20px 20px 0 0;
@@ -293,6 +302,7 @@ img.pics1 {
   height: 100px;
   object-fit: cover;
 }
+
 img.pics2 {
   border-radius: 20px 0 0 20px;
   width: 130px;
@@ -300,12 +310,14 @@ img.pics2 {
   object-fit: cover;
   padding: 0 10px 0 0;
 }
+
 img.pics3 {
   border-radius: 20px 20px 0 0;
   width: 100%;
   height: 300px;
   object-fit: cover;
 }
+
 img.pics4 {
   border-radius: 20px 20px 0 0;
   width: 100%;
@@ -318,7 +330,14 @@ img.pics4 {
   padding: 20px;
   max-width: 100%;
   border-radius: 20px;
+  font-weight: bolder;
 }
+
+.bottom-section a {
+  text-decoration: none;
+  color: #000;
+}
+
 .bottom-result {
   display: flex;
   flex-direction: row;
@@ -333,17 +352,68 @@ img.pics4 {
   border-radius: 20px;
   width: 250px;
   max-height: 100%;
-  padding: 0px;
+  padding: 0;
   margin: 15px;
   background-color: #fff;
 }
+
 .activite-result-2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 20px;
   width: 250px;
   max-height: 100%;
-  padding: 5px;
-  margin: 15px;
+  padding-bottom: 5px;
+  margin: 23px;
   background-color: #fff;
+}
+
+.description-bottom {
+  margin-left: 20px;
+  font-weight: bolder;
+}
+
+.bottom-title {
+  font-weight: bolder;
+  margin: 0 0 0 35px;
+}
+
+.footer-clean {
+  margin: 50px 0 0 0;
+  padding: 25px 20px 20px 0px;
+  background-color: #f2f2f2;
+  color: #000;
+}
+
+.footer-clean h3 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.footer-clean ul {
+  padding: 0;
+  list-style: none;
+  line-height: 2em;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.footer-clean ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer-clean ul a:hover {
+  opacity: 1;
+}
+
+.footer-container {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
 }
