--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@ body {
   color: #000;
   font-family: "Raleway", arial, sans-serif;
   font-size: 1em;
-  margin: 0px 40px 0px 40px;
-  
+  margin : 0
+}
+
+header {
+  margin: 0 40px 0 40px;
+
 }
 
 .header {
@@ -91,6 +95,11 @@ h1 {
   background-color: #f2f2f2;
   padding: 15px;
   border-radius: 15px 0 0 15px;
+}
+
+.search-section {
+  margin: 0 40px 0 40px;
+
 }
 .search {
   display: flex;
@@ -182,19 +191,38 @@ h1 {
 
 
 .main-result {
-  display: flex;
-  flex-flow: row nowrap;
-  margin-bottom: 50px;
+  display: inline-flex;
+  margin: 0 40px 50px 40px;
+
 }
 
 .main-section {
   background-color: #f2f2f2;
-  display: flex;
-  flex-flow: row wrap;
   max-width: 70%;
   border-radius: 20px;
   padding-top: 30px;
+  margin: 0 20px 0 0;
+
 }
+.center {
+  display: flex;
+
+  justify-content: center;
+  flex-wrap: wrap;
+  }
+  
+  
+  .card1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 20px;
+    width: 210px;
+    max-height: 100%;
+    padding: 5px;
+    margin: 10px;
+    background-color: #fff;
+  }
+
 
 .result-title {
   font-size: 16px;
@@ -203,25 +231,7 @@ h1 {
   
 }
 
-.center {
-  display: inline-flex;
-  flex-flow: row wrap;
-  justify-content: center;
-}
 
-
-.card1 {
-  box-sizing: content-box;
-  
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 20px;
-  width: 250px;
-  max-height: 100%;
-  padding: 5px;
-  margin: 10px;
-  background-color: #fff;
-}
 
 .card1 a {
   color: #000;
@@ -260,9 +270,9 @@ h1 {
   justify-content: space-evenly;
   align-items: flex-start;
   padding: 20px;
-  max-width: 30%;
+  max-width: 100%;
   border-radius: 20px;
-  margin: 0 20px 0 20px;
+  margin: 0 0 0 20px;
 }
 .result-title-2{
   display: inline-flex;
@@ -338,6 +348,8 @@ img.pics4 {
   max-width: 100%;
   border-radius: 20px;
   font-weight: bolder;
+  margin: 0 40px 0 40px;
+
 }
 .bottom-section a {
   text-decoration: none;
@@ -348,7 +360,7 @@ img.pics4 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .activite-result {
@@ -358,7 +370,7 @@ img.pics4 {
   width: 250px;
   max-height: 100%;
   padding: 0;
-  margin: 15px;
+  margin: 15px 0 15px 0;
   background-color: #fff;
 }
 .activite-result-2 {
@@ -368,7 +380,7 @@ img.pics4 {
   width: 250px;
   max-height: 100%;
   padding-bottom: 5px;
-  margin: 23px;
+  margin: 23px 0 23px 0;
   background-color: #fff;
 }
 
