--- a/style.css
+++ b/style.css
@@ -51,41 +51,7 @@ header {
   float: right;
 }
 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header a.active {
-    border-top: none;
-    border-bottom: solid 4px #0065FC;
-    color: #000;
-  }
-  .header-right {
-  
-      display: flex;
-      flex-flow: column-reverse;
-    float: none;
-    position:relative;
-  }
 
-  .subscribe {
-    position:absolute;
-    bottom: 140px;
-    right: 0;
-  }
-
-  .fa-search {
-    display: inline-block;  
-  }
-  
-span.text-rechercher {
-  display: none;
-}
- 
-}
 h1 {
   font-size: 16px;
   font-weight: 900;
@@ -130,7 +96,7 @@ h1 {
   font-size: 16px;
 }
 
-.fa-search {
+i.fa-search {
   display: none;
 }
 
@@ -161,8 +127,16 @@ h1 {
 }
 
 .btn:hover {
-  transform: scale(1.1);
+  animation: MoveUpDown 1s linear infinite;
   background-color: #f2f2f2;
+}
+@keyframes MoveUpDown {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
 }
 .fa-money-bill-wave,
 .fa-child,
@@ -449,3 +423,107 @@ img.pics4 {
 
 
 
+@media screen and (max-width: 500px) {
+
+
+  header {
+    margin: 0;
+  
+  }
+header .logo {
+  margin: 20px 20px 0 20px;
+}
+  .header a {
+    float: none;
+    display: flex;
+    text-align: left;
+  }
+  
+  .header a.active {
+    border-top: none;
+    border-bottom: solid 4px #0065FC;
+    color: #000;
+  }
+  .header a.activite {
+    border-top: none;
+    border-bottom: solid 4px #fff;
+
+  }
+
+  
+
+  .header-right {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: stretch;
+      align-items: center;
+    float: none;
+    position:relative;
+    
+  }
+
+  .subscribe {
+    position:absolute;
+    bottom: 65px;
+    right: 0;
+  }
+ 
+
+.search-section {
+  display: block;
+  margin: 0 20px 0 20px;
+}
+  .search {
+display: inline-flex; 
+margin: 0;
+}
+.searchButton {
+  border-radius: 15px;
+}
+span.text-rechercher {
+  display: none;
+}
+
+
+
+i.fa-search {
+  display: flex;
+}
+
+.contenairbtn {
+  display: inline-flex;
+flex-flow: row wrap;
+justify-content: space-between;
+align-items: flex-start;
+
+}
+
+.main-result {
+  display: flex;
+  flex-flow: column-reverse wrap;
+  margin: 0;
+}
+
+.rightside {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 0;
+  border-radius: 0;
+  margin: 0;
+}
+
+.result-title-2{
+  display: inline-flex;
+  margin-left : 20px;
+  position: relative;
+}
+.fa-chart-line {
+  font-size: 1.3em;
+  position: absolute;
+  float: right;
+  margin-right: 20px;
+}
+
+}
