--- a/style-mobile.css
+++ b/style-mobile.css
@@ -44,8 +44,11 @@
         grid-area: activite;
     }
     h1 {
-        margin: 0 0 10px 20px;
-        line-height: 1.5em;
+        font-size: 18px;
+        font-weight: bolder;
+        margin: 0 50px 10px 20px;
+        line-height: 1.3em;
+        text-align: left;
     }
     p {
         margin: 0 0 0 20px;
@@ -59,12 +62,12 @@
     /* Bloc recherche et Filtre */
 
     .search-section {
-        display: block;
+        display: inline-block;
         margin: 0 10px 0 10px;
     }
     .search {
-        display: inline-flex;
-        margin: 0 10px 0 10px;
+        display: flex;
+        justify-content: center;
     }
     .searchButton {
         border-radius: 15px;
@@ -83,7 +86,7 @@
         margin: 30px 0 30px 0;
     }
     .contenairbtn p {
-        margin: 0;
+        margin: 0 0 10px 0;
         color: #000;
         font-weight: bolder;
     }
@@ -91,6 +94,8 @@
         margin: 5px;
         padding: 0 4px 0 0;
     }
+    
+
     /* Bloc recherche et Filtre */
 
 
@@ -109,20 +114,21 @@
         padding: 30px 15px 0 15px;
         border-radius: 0;
         margin: 0;
+        align-content: center;
     }
     .card2 {
         display: inline-flex;
         flex-wrap: wrap;
-        width: auto;
-        height: 100px;
+        width: 100%;
+        height: 120px;
     }
     img.pics2 {
         width: 100px;
-        height: 100px;
+        height: 120px;
     }
     .result-title-2 h1 {
         font-size: 20px;
-        margin: 0 -10px 10px 0;
+        margin: 0 -10px 10px 5px;
         font-weight: bolder;
     }
     .result-title-2 {
@@ -139,7 +145,7 @@
         margin: 10px 0 5px 0;
     }
     .room-container-2 p {
-        margin: 0 0 15px 0;
+        margin: 0 0 35px 0;
     }
     .main-section {
         background-color: #fff;
@@ -216,9 +222,8 @@
     }
     /* Bloc Activités */
 
-
-    /* Footer */
     
+    /* Footer */
     .footer-container {
         display: inline-flex;
         flex-flow: column wrap;
