--- a/style-mobile.css
+++ b/style-mobile.css
@@ -111,7 +111,7 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        padding: 30px 15px 0 15px;
+        padding: 30px 15px 30px 15px;
         border-radius: 0;
         margin: 0;
         align-content: center;
@@ -154,7 +154,7 @@
     }
     h1.result-title {
         font-size: 20px;
-        margin: 0 0 0 10px;
+        margin: 30px 0 10px 10px;
         font-weight: bolder;
     }
     .center {
