--- a/style-header.css
+++ b/style-header.css
@@ -47,6 +47,10 @@
         font-size: 16px;
         font-weight: 900;
     }
+    h2 {
+        font-size: 16px;
+        font-weight: 900;
+    }
 
     h3 {
         font-size: 16px;
