--- a/CSS/style-mobile.css
+++ b/CSS/style-mobile.css
@@ -214,7 +214,7 @@
     }
     img.pics4 {
         width: 100%;
-        height: 100px;
+        /* height: 100px; */
     }
     .description-bottom {
         font-weight: bolder;
