--- a/CSS/style-tabs.css
+++ b/CSS/style-tabs.css
@@ -1,13 +1,17 @@
-
 @media (max-width:959px) and (min-width: 501px) {
-
+    html {
+        background-color: red;
+    }
+    body {
+        background-color: green;
+        display: table;
+        margin: 0;
+    }
     /* Header */
-
     header {
-        width: 100%;
+        display: block;
         margin: 0 20px 0 20px;
     }
-
     .header a {
         float: left;
         color: #0065fc;
@@ -17,49 +21,36 @@
         font-size: 18px;
         line-height: 50px;
     }
-
     .header img.logo {
-        max-width: 100%;
         height: auto;
     }
-
     /* Header */
-
-
-
     /* Bouton filtres */
-
     .contenairbtn {
-       display: block;
+        display: block;
     }
-
     .btn {
         margin: 5px 15px 5px 15px;
     }
-
     /* Bouton filtres */
-
-      /* Bloc résultat et Les plus populaire */
-
-.rightside {
-    display: block;
-    width: 100%;
-
-    height: 100%;
-}
-.main-result {
-    display: inline-flex;
-    width: 100%;
-    margin: 0 40px 50px 40px;
-}
-.result-title {
-    margin: 10px 0 20px 10px;
-}
-
     /* Bloc résultat et Les plus populaire */
-
-.bottom-section {
-
-display: block;
-width: 100%;
-}
+    .rightside {
+        display: block;
+        margin: 0;
+        height: 100%;
+    }
+    .main-result {
+        background-color: pink;
+        display: inline-flex;
+        margin: 20px 10px 20px 10px;
+    }
+    .result-title {
+        margin: 10px 0 20px 10px;
+    }
+    /* Bloc résultat et Les plus populaire */
+    .bottom-section {
+        background-color: royalblue;
+        display: block;
+        margin: 0;
+    }
+    .footer-clean {}
