--- a/CSS/style-main-result.css
+++ b/CSS/style-main-result.css
@@ -2,7 +2,7 @@
 
 .main-result {
     display: inline-flex;
-    margin: 0 40px 50px 40px;
+    margin: 0 20px 50px 20px;
 }
 
 .main-section {
@@ -10,13 +10,14 @@
     max-width: 70%;
     border-radius: 20px;
     padding-top: 30px;
-    margin: 0 20px 0 0;
+    margin: 0;
 }
 
 .center {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 10px 0 10px;
 }
 
 .card1 {
@@ -26,7 +27,7 @@
     width: 210px;
     max-height: 100%;
     padding: 5px;
-    margin: 10px;
+    margin: 5px;
     background-color: #fff;
 }
 
@@ -63,7 +64,6 @@
 
 /* Section resultat central */
 
-
 /* Section resultat sidebar */
 
 .rightside {
@@ -72,9 +72,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: flex-start;
     padding: 20px;
-    max-width: 100%;
     border-radius: 20px;
     margin: 0 0 0 20px;
 }
@@ -95,7 +93,7 @@
 .fa-chart-line {
     font-size: 1.3em;
     position: absolute;
-    right: -170px;
+    right: -10px;
 }
 
 .card2 {
