--- a/CSS/style-activite.css
+++ b/CSS/style-activite.css
@@ -3,14 +3,14 @@
 img.pics3 {
     border-radius: 20px 20px 0 0;
     width: 100%;
-    height: 300px;
+    height: 500px;
     object-fit: cover;
 }
 
 img.pics4 {
     border-radius: 20px 20px 0 0;
     width: 100%;
-    height: 100px;
+    height: 200px;
     object-fit: cover;
 }
 
@@ -18,9 +18,10 @@ img.pics4 {
     background-color: inherit;
     padding: 20px;
     max-width: 100%;
+    max-height: 100%;
     border-radius: 20px;
     font-weight: bolder;
-    margin: 0 20px 0 20px;
+    margin: 0;
 }
 
 .bottom-section a {
@@ -32,39 +33,48 @@ img.pics4 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
 .activite-result {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    transition: all .2s ease-in-out;
     border-radius: 20px;
-    width: 250px;
+    width: 330px;
     max-height: 100%;
     padding: 0;
     margin: 15px 0 15px 0;
     background-color: #fff;
 }
 
+.activite-result:hover {
+    transform: scale(1.03);
+}
+
 .activite-result-2 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    transition: all .2s ease-in-out;
     border-radius: 20px;
-    width: 250px;
+    width: 300px;
     max-height: 100%;
     padding-bottom: 5px;
     margin: 23px 0 23px 0;
     background-color: #fff;
 }
+.activite-result-2:hover {
+    transform: scale(1.03);
+}
 
 .description-bottom {
     margin-left: 20px;
-    font-weight: bolder;
+    font-size: 20px;
+    font-weight: 1000;
 }
 
 .bottom-title {
-    font-weight: bolder;
+    font-size: 23px;
+    font-weight: 1000;
     margin: 0 0 0 35px;
 }
 
