--- a/CSS/style-main-result.css
+++ b/CSS/style-main-result.css
@@ -16,24 +16,27 @@
 .center {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
     margin: 20px;
 }
 
 .card1 {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    transition: all .2s ease-in-out;
     border-radius: 20px;
-    width: 210px;
+    width: 270px;
     max-height: 100%;
     padding: 5px;
-    margin: 5px;
+    margin: 10px;
     background-color: #fff;
+    
 }
-
+.card1:hover {
+    transform: scale(1.03)
+}
 .result-title {
-    font-size: 16px;
-    font-weight: 900;
+    font-size: 23px;
+    font-weight: 1000;
     margin: 10px 0 20px 40px;
 }
 
@@ -101,12 +104,15 @@
     flex-direction: row;
     flex-wrap: wrap;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    transition: all .2s ease-in-out;
     border-radius: 20px;
-    width: 300px;
+    width: 340px;
     padding: 5px;
     margin: 5px;
     background-color: #fff;
+}
+.card2:hover {
+    transform: scale(1.03);
 }
 
 .room-container-2 {
