--- a/CSS/style-search.css
+++ b/CSS/style-search.css
@@ -36,7 +36,8 @@
         padding-right: 20px;
         padding-left: 20px;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 18px;
+        font-weight: bolder;
     }
 
     i.fa-search {
@@ -66,8 +67,8 @@
         border-radius: 60px;
         color: #000;
         padding: 0 20px 0 20px;
-        font-size: 16px;
-        font-weight: 600;
+        font-size: 18px;
+        font-weight: 1000;
         cursor: pointer;
         margin: 0 15px 0 15px;
         transition: all 0.2s ease-in-out;
